fix: pass z-index to notes

--- a/src/components/Text/style.scss
+++ b/src/components/Text/style.scss
@@ -104,6 +104,7 @@ em.note {
   max-width: 350px;
   font-style: normal;
   font-weight: 400;
+  z-index: 10;
 
   @media screen and (max-width: $break-mobile) {
     transform: none;
